# customuser

./: db.sqlite3  pyproject.toml
custom_user_app/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
custom_user_app/migrations/: 0001_initial.py  0002_auto_20200831_1601.py
custom_user_project/: settings.py  urls.py
templates/: base.html  home.html  signup.html
templates/registration/: login.html
